--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: MLH Autotest
+name: MLH AutoTest
 
 on:
   push:
@@ -17,19 +17,21 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Dependências extras necessárias para os testes MLH
+          pip install fastapi uvicorn pydantic httpx pytest pytest-cov
 
       - name: Run tests
         run: |
-          pytest --maxfail=1 --disable-warnings --cov=.
+          pytest --maxfail=1 --disable-warnings --cov=. 
 
       - name: Upload coverage
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: ./
+          path: .
