--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # Banco dedicado para CI em diretório gravável
+      DATABASE_URL: sqlite:///./data/mlh_test.db
 
     steps:
       - name: Checkout
@@ -23,12 +26,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # Dependências extras necessárias para os testes MLH
-          pip install fastapi uvicorn pydantic httpx pytest pytest-cov
+
+      - name: Prepare writable database directory
+        run: |
+          mkdir -p data
+          ls -la
+          echo "Using DATABASE_URL=$DATABASE_URL"
 
       - name: Run tests
         run: |
-          pytest --maxfail=1 --disable-warnings --cov=. 
+          pytest --maxfail=1 --disable-warnings --cov=. --cov-report=xml
 
       - name: Upload coverage
         uses: actions/upload-artifact@v4
