--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ pytest>=7.4.0
 pytest-cov>=4.1.0
 pytest-asyncio>=0.21.0
 sqlalchemy
+# Dependências FastAPI para testes MLH
+fastapi
+uvicorn
+pydantic
+httpx
