--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ openpyxl==3.1.2
 pytest>=7.4.0
 pytest-cov>=4.1.0
 pytest-asyncio>=0.21.0
-sqlalchemy
 # Dependências FastAPI para testes MLH
-fastapi
-uvicorn
-pydantic
-httpx
+fastapi==0.115.5
+uvicorn==0.30.6
+pydantic==2.11.7
+httpx==0.28.1
+starlette==0.41.3
