ci: fix yaml syntax by quoting DATABASE_URL value

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Banco em memória para testes no CI (evita problemas de permissão)
-      DATABASE_URL: sqlite:///:memory:
+      DATABASE_URL: "sqlite:///:memory:"
 
     steps:
       - name: Checkout
