chore: remove .env from Git tracking and strengthen security .gitignore
- Remove .env from Git index (file preserved locally)
- Add comprehensive .gitignore rules for all sensitive files
- Add docs/SECURITY_NOTES.md with security guidelines
- Protect API keys, tokens, OAuth credentials, environment files
- Warn about exposed credentials needing immediate rotation

BREAKING: Credentials exposed in GitHub history must be rotated:
- Tiny ERP API Token
- Shopee Partner Key
- Shopee OAuth tokens

See docs/SECURITY_NOTES.md for remediation steps.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# ===== SECURITY: Environment Variables & Secrets =====
+# CRITICAL: Nunca faça commit de arquivos .env que contenham API keys, tokens ou credenciais
+# Esses arquivos devem existir apenas localmente no seu disco
+.env
+.env.local
+.env.*.local
+secrets/
+*.secrets
+config_local.py
+oauth_tokens.json
+
+# ===== SECURITY: API Keys & Tokens =====
+# CRITICAL: Shopee, Tiny, OAuth e outros tokens de terceiros
+# Esses dados foram expostos e devem ser rotacionados IMEDIATAMENTE
+.shopee*
+.tiny*
+*oauth*
+*token*
+*credential*
+*api_key*
+
 # Bancos de dados locais
 *.db
 
@@ -30,3 +51,13 @@ agent_monitor_state.json
 build/
 app_universal*/
 SCRIPT XML E XML ALTERADO/
+
+# VSCode & IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Sistema
+.DS_Store
+node_modules/
